Add header,content, and list

--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
-<h1>Nuala Gray</h1>
-  <h2>Economist Nerd</h2>
-  <p>Nuala here. I will be joyously starting in the daytime January 2019 class. I enjoy living in Hawthorne/Division neighborhood with my partner Will, teen daughter Raven, a snake named Willow, and a currently empty fish tank. The plan is to get fish this month and baby chicks next month.
-  <p>I have dual Irish/US citizenship so I travel back and forth from Ireland regularly. Truly all travel appeals to me.</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-  <p>My personal interests are languages, gaming, movies, writing/reading, biking, cafe culture, hacking, and music jamming. Although I am alarmingly bad at disc golf, I still enjoy playing it.</p>
+  <head>
+    <meta charset="utf-8">
+    <title>Nuala's Portfolio Landing Page</title>
+  </head>
 
-  <p>Cheers,Nuala (pronounced NewLa/Not picky about pronouns)</p>
+  <body>
+
+
+    <h1>Nuala Gray</h1>
+    <h2>Economist Nerd</h2>
+    <p>Nuala here. I will be joyously starting in the daytime January 2019 class. I enjoy living in Hawthorne/Division neighborhood with my partner Will, teen daughter Raven, a snake named Willow, and a currently empty fish tank. The plan is to get fish this month and baby chicks next month.
+    <p>I have dual Irish/US citizenship so I travel back and forth from Ireland regularly. Truly all travel appeals to me.</p>
+
+    <p>My personal interests are languages, gaming, movies, writing/reading, biking, cafe culture, hacking, and music jamming. Although I am alarmingly bad at disc golf, I still enjoy playing it.</p>
+
+    <p>How I like to get around!</p>
+    <ul>
+      <li>Electric Kickscooter</li>
+      <li>My Feet</li>
+      <li>Trek Bicycle</li>
+      <li>Tandem Bicycle</li>
+      <li>1984 Chevy Van</li>
+      <li>1973 Austin Mini</li>
+      <li>Car2Go</li>
+      <li>Trimet and Other public transport</li>
+      <li>Amtrak Sleeper Trains</li>
+      <li>Planes out of PDX and DUB</li>
+    </ul>
+
+    <p>The reason that I wanted to take the Epicodus class is to beef up my coding skills, so that I can be more efficient at working with companies and non-profits. I used to code a long time ago, and enjoyed it in the fascinating/frustrating/fulfilling way that programing can be. I am amazed that much of the logic follows through and there are great tools like editors and Github. However, the jumping and getting it done eludes me, as I seem to be missing some key elements.</p>
+
+    <p>Cheers,Nuala (pronounced NewLa/Not picky about pronouns)</p>
+
+  </body>
+</html>
