adjusting floats, photo resizing, color exploring

--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
     <h1>Nuala Gray</h1>
     <h2>Economist Nerd</h2>
 
+    <div class="rightphoto">
     <img class="resize" src="NPianoPop.jpg" alt="Nuala sitting with Pops">
+    </div>
 
-    <p>Nuala here. I will be joyously starting in the daytime January 2019 class. I enjoy living in Hawthorne/Division neighborhood with my partner Will, teen daughter Raven, a snake named Willow, and a currently empty fish tank. The plan is to get fish this month and baby chicks next month.</p>
+    <p>Nuala here. I will be joyously starting in the daytime January 2019 class. I enjoy living in Hawthorne/Division neighborhood with my partner Will, teen daughter Raven, a snake named Willow, and a currently empty fish tank. The plan is to get fish this month and baby chicks next month. Raven is a senior at Saint Mary's Academy in downtown Portland. Will is a tech manager at a retirement living community as well as starting up a company called computerstuffhelp.com</p>
 
     <p>I have dual Irish/US citizenship so I travel back and forth from Ireland regularly. Truly all travel appeals to me.</p>
+
+    <div class="leftphoto">
     <img class="resize" src="NualaCauseway.jpg" alt="Nuala sitting at the Giant's Causeway">
+    </div>
 
     <p>My personal interests are languages, gaming, movies, writing/reading, biking, cafe culture, hacking, and music jamming. Although I am alarmingly bad at disc golf, I still enjoy playing it.</p>
 
     <div class="sidebar">
-    <p>How I like to get around!</p>
+    <h2>How I like to get around!</h2>
       <ul>
         <li>Electric Kickscooter</li>
         <li>My Feet</li>
@@ -38,12 +43,13 @@
       </ul>
     </div>
 
+    <h2>Current Ambitions in Coding</h2>
     <p>The reason that I wanted to take the Epicodus class is to beef up my coding skills, so that I can be more efficient at working with companies and non-profits. I used to code a long time ago, and enjoyed it in the fascinating/frustrating/fulfilling way that programing can be. I am amazed that much of the logic follows through and there are great tools like editors and Github. However, the jumping and getting it done eludes me, as I seem to be missing some key elements.</p>
 
 <!-- https://program.sha2017.org/speakers/147.html -->
     <div class="prof">
 
-
+      <h2>Nuala's Professional Work</h2>
       <p>Nuala is an Economist and Entrepreneur focusing on practical activism. Her background is in tech, activism (disability, feminism, GLBT, environment), and behavioral economics. She divides her time between her two countries of the United States and Ireland.
         <p>Nuala Gray is an original Hacker and tech Nerd, who is now an Economist, Entrepreneur and as always, a not-so-secret Activist.
         <p>She has worked as a consultant for many years in tech, economics, and activism. Nuala’s background in tech, business, economics, and behavioral science allows her to merge these fields for efficient and practical workshops. This past year Nuala has given workshops at Civic Hall (NYC), Platform Cooperativism (NYC), and Aspiration Dev Summit(Oakland). She did speaker consulting at Enspiral Open Society Open Source (Wellington, NZ) and DES2016(Madrid, Spain) as well as prepared study materials for MIT classes.</p>
@@ -68,17 +74,21 @@
 
 
 
+    <h2>Nuala's Home in Ireland</h2>
+    <div class="rightphoto">
+    <img class="resize" src="WillCauseway.jpg" alt="The Wild Giant's Causeway in Ireland">
+    </div>
 
+    <p>This unique home could be exactly what you have been seeking: Your own retreat with private with lovely views from every room in the house.
+    This place is a true retreat from hectic city life. Most Irish Rentals are on busy roads or an attached part of a complex. Here, the peace and quiet of bird song, or the wind in the trees, or perhaps a cow in the distance are the only noises that you will hear.
+    This home is on the land of my ancestors. It is ancient here, surrounded by significant historic sites and dolmens. Marking pedestrian paths criss cross around the property to ancient treasures and gorgeous views.
+    There has been much inspiration for writers here since Yeats wrote of the Terrible Beauty of Sligo. There is even an old school desk here that the American writer Raymond Carver wrote about as inspiration. Music has been played and Poems have been read here.
+    Enjoy the solitude in nature on the side of the mountainside. Lovely views of mountains in the distance.
+    Walk to Lough Arrow or Lough Bo for some fishing. Stop by Cromleach Lodge for a dinner or spa treatment. Hike to the Moytura Battlefield or the Labby Rock to experience some real live legends.</p>
 
-<img class="resize" src="WillCauseway.jpg" alt="The Wild Giant's Causeway in Ireland">
-
-<p>This unique home could be exactly what you have been seeking: Your own retreat with private with lovely views from every room in the house.
-This place is a true retreat from hectic city life. Most Irish Rentals are on busy roads or an attached part of a complex. Here, the peace and quiet of bird song, or the wind in the trees, or perhaps a cow in the distance are the only noises that you will hear.
-This home is on the land of my ancestors. It is ancient here, surrounded by significant historic sites and dolmens. Marking pedestrian paths criss cross around the property to ancient treasures and gorgeous views.
-There has been much inspiration for writers here since Yeats wrote of the Terrible Beauty of Sligo. There is even an old school desk here that the American writer Raymond Carver wrote about as inspiration. Music has been played and Poems have been read here.
-Enjoy the solitude in nature on the side of the mountainside. Lovely views of mountains in the distance.
-Walk to Lough Arrow or Lough Bo for some fishing. Stop by Cromleach Lodge for a dinner or spa treatment. Hike to the Moytura Battlefield or the Labby Rock to experience some real live legends.</p>
+<div class="leftphoto">
 <img class="resize" src="RavenOnLabby.jpg" alt="Raven sitting on the Labby Rock">
+</div>
 
 <p>Centrally located between Castlebaldwin, Riverstown, Sligo, Boyle/Carrick, and Ballymote. Travel to different Art and Music festivals through-out the region. Try out surfing on one day and travel to charming shopping the next day.
 Sweet house, built with love and with guests in mind. An eco-green remodel recently for a healthy interior. House is insulated and has double paned modern windows. Lots of new features like wood floors and beautiful wall colors. This house is furnished with many antique furnishings but modern beds, hot water, heat and kitchen. This house on a hill has a sitting room, dining room, and conservatory porch on the front of the house.
