--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img class="resize" src="NPianoPop.jpg" alt="Nuala sitting with Pops">
     </div>
 
-    <p>Nuala here. I will be joyously starting in the daytime January 2019 class. I enjoy living in Hawthorne/Division neighborhood with my partner Will, teen daughter Raven, a snake named Willow, and a currently empty fish tank. The plan is to get fish this month and baby chicks next month. Raven is a senior at Saint Mary's Academy in downtown Portland. Will is a tech manager at a retirement living community as well as starting up a company called computerstuffhelp.com</p>
+    <p>Nuala here. I will be joyously starting in the daytime Epicodus January 2019 class. I enjoy living in Hawthorne/Division neighborhood with my partner Will, teen daughter Raven, a snake named Willow, and a currently empty fish tank. The plan is to get fish this month and baby chicks next month. Raven is a senior at Saint Mary's Academy in downtown Portland. Will is a tech manager at a retirement living community as well as starting up a company called <a href="https//computerstuffhelp.com/index.html">Computer Stuff Help </a> </p>
 
     <p>I have dual Irish/US citizenship so I travel back and forth from Ireland regularly. Truly all travel appeals to me.</p>
 
@@ -46,8 +46,26 @@
     <h2>Current Ambitions in Coding</h2>
     <p>The reason that I wanted to take the Epicodus class is to beef up my coding skills, so that I can be more efficient at working with companies and non-profits. I used to code a long time ago, and enjoyed it in the fascinating/frustrating/fulfilling way that programing can be. I am amazed that much of the logic follows through and there are great tools like editors and Github. However, the jumping and getting it done eludes me, as I seem to be missing some key elements.</p>
 
+<h3>Coding Projects</h3>
+<ul>
+  <li>hello-world-2
+    <ul>
+      <li>Epicodus hello world pafe in different languages.</li>
+      <li> <a href="https://github.com/GraceInGravity/hello-world-2/blob/master/hello-world.html">hello-world-2 link</a></li>
+    </ul>
+  </li>
+
+      <li>
+    <ul>
+      <li></li>
+
+      <li><a href=" "></a></li>
+    </ul>
+  </li>
+</ul>
+
 <!-- https://program.sha2017.org/speakers/147.html -->
-    <div class="prof">
+    <div class="my-class">
 
       <h2>Nuala's Professional Work</h2>
       <p>Nuala is an Economist and Entrepreneur focusing on practical activism. Her background is in tech, activism (disability, feminism, GLBT, environment), and behavioral economics. She divides her time between her two countries of the United States and Ireland.
@@ -62,7 +80,7 @@
 
 <!-- https://www.facebook.com/MoyturaIrishMountainRetreat/ -->
 
-    <p>Reason to go to Sligo Ireland</p>
+    <strong>Reason to go to Sligo Ireland</strong>
     <ul>
       <li>If you are a Writer or a Painter...</li>
       <li>If you just wish to get away from the hectic noise of modern life...</li>
