debug, add more code example list, change colors, fix links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <body>
 
-
     <h1>Nuala Gray</h1>
     <h2>Economist Nerd</h2>
 
@@ -21,7 +20,7 @@
 
     <p>I have dual Irish/US citizenship so I travel back and forth from Ireland regularly. Truly all travel appeals to me.</p>
 
-    <div class="leftphoto">
+    <div class="rightphoto">
     <img class="resize" src="NualaCauseway.jpg" alt="Nuala sitting at the Giant's Causeway">
     </div>
 
@@ -48,20 +47,19 @@
 
 <h3>Coding Projects</h3>
 <ul>
-  <li>hello-world-2
+  <li> hello-world-2</li>
     <ul>
-      <li>Epicodus hello world pafe in different languages.</li>
+      <li>Epicodus hello world in different languages.</li>
+      <li>Written in html </li>
       <li> <a href="https://github.com/GraceInGravity/hello-world-2/blob/master/hello-world.html">hello-world-2 link</a></li>
     </ul>
-  </li>
-
-      <li>
+  <li>wiki</li>
     <ul>
-      <li></li>
-
-      <li><a href=" "></a></li>
+      <li>An attempted Wikipedia mirror</li>
+      <li>Written in html</li>
+      <li><a href="https://github.com/GraceInGravity/wiki/blob/master/index.html">wiki clone link</a></li>
     </ul>
-  </li>
+  <li></li>
 </ul>
 
 <!-- https://program.sha2017.org/speakers/147.html -->
@@ -80,6 +78,7 @@
 
 <!-- https://www.facebook.com/MoyturaIrishMountainRetreat/ -->
 
+  <div class="sidebar">
     <strong>Reason to go to Sligo Ireland</strong>
     <ul>
       <li>If you are a Writer or a Painter...</li>
@@ -87,9 +86,8 @@
       <li>If you wish for your children to discover a magical world of nature or history...</li>
       <li>If you don't wish to be surrounded by tourists and instead seek to experience a traditional Ireland...</li>
       <li>If you are drawn to the mythology of Celtic History...</li>
-
     </ul>
-
+  </div>
 
 
     <h2>Nuala's Home in Ireland</h2>
@@ -108,15 +106,18 @@
 <img class="resize" src="RavenOnLabby.jpg" alt="Raven sitting on the Labby Rock">
 </div>
 
-<p>Centrally located between Castlebaldwin, Riverstown, Sligo, Boyle/Carrick, and Ballymote. Travel to different Art and Music festivals through-out the region. Try out surfing on one day and travel to charming shopping the next day.
-Sweet house, built with love and with guests in mind. An eco-green remodel recently for a healthy interior. House is insulated and has double paned modern windows. Lots of new features like wood floors and beautiful wall colors. This house is furnished with many antique furnishings but modern beds, hot water, heat and kitchen. This house on a hill has a sitting room, dining room, and conservatory porch on the front of the house.
-The Sitting room with a tiled fireplace for turf or wood fires, two couches, and tables. There are puzzles and games for use as well as a radio/cd player. Or make your own music with the bodrain and tin whistles.
-Pull out dining room table can seat eight. Plenty of wine glasses and cocktail glasses for company as well as serving dishes.
-The conservatory is warm and snug and bright even when the weather is not. Curl up on the sectional couch with a cup of tea and a good book. Be inspired and sit at the desk to write your novel. This is the desk that
+<div class="rightphoto">
+<img class="resize" src="IrishPonies.jpg" alt="Cute ponies">
+</div>
 
-The kitchen has all appliances including microwave, hot water pot and toaster. Kitchen has just been updated with storage fixtures and butcher block. Kitchen includes all the dishes, pots, pans, silverware etc to cook a big meal for guests.
-The Master Bedroom has a new Queen size bed, bureau, desk and a spacious closet. The second bedroom has room for two and a bureau and large closet. The third bedroom has a modern single bed, shelves, and a closet.
-There are extra mattresses which can be used in other parts of the house as well.
+<p>Centrally located between Castlebaldwin, Riverstown, Sligo, Boyle/Carrick, and Ballymote. Travel to different Art and Music festivals through-out the region. Try out surfing on one day and travel to charming shopping the next day.</p>
+<p>Sweet house, built with love and with guests in mind. An eco-green remodel recently for a healthy interior. House is insulated and has double paned modern windows. Lots of new features like wood floors and beautiful wall colors. This house is furnished with many antique furnishings but modern beds, hot water, heat and kitchen. This house on a hill has a sitting room, dining room, and conservatory porch on the front of the house.</p>
+<p>Pull out dining room table can seat eight. Plenty of wine glasses and cocktail glasses for company as well as serving dishes.
+The conservatory is warm and snug and bright even when the weather is not. Curl up on the sectional couch with a cup of tea and a good book. Be inspired and sit at the desk to write your novel. This is the desk that</p>
+
+<p>The kitchen has all appliances including microwave, hot water pot and toaster. Kitchen has just been updated with storage fixtures and butcher block. Kitchen includes all the dishes, pots, pans, silverware etc to cook a big meal for guests.
+The Master Bedroom has a new Queen size bed, bureau, desk and a spacious closet. The second bedroom has room for two and a bureau and large closet. The third bedroom has a modern single bed, shelves, and a closet.</p>
+<p>There are extra mattresses which can be used in other parts of the house as well.
 Plenty of linens and towels available.
 Bathroom has a full soaking tub. Hairdryer, curling iron, and iron available for guest use.
 Books, Maps, and Tourist information.
