add more code example list, vary how to link to git

--- a/index.html
+++ b/index.html
@@ -59,7 +59,25 @@
       <li>Written in html</li>
       <li><a href="https://github.com/GraceInGravity/wiki/blob/master/index.html">wiki clone link</a></li>
     </ul>
-  <li></li>
+    <li>petpage</li>
+      <ul>
+        <li>A Lost Pet page</li>
+        <li>Written in html</li>
+        <li><a href="https://github.com/GraceInGravity/petpage.git">lost pet git link</a></li>
+      </ul><li>Cupcake-shop</li>
+        <ul>
+          <li>Cupcakes for Bunnies website</li>
+          <li>Written in html</li>
+          <li><a href="https://github.com/GraceInGravity/Cupcake-shop">cupcake page link</a></li>
+        </ul>
+        <li>vaca</li>
+          <ul>
+            <li>An unexpected vacation website!</li>
+            <li>Written in html</li>
+            <li><a href="https://github.com/GraceInGravity/vaca/blob/master/index.html">wiki clone link</a></li>
+          </ul>
+          <li>This very page is an example of Nuala's work</li>
+          <li>Many Many More to come!</li>
 </ul>
 
 <!-- https://program.sha2017.org/speakers/147.html -->
