computer issues, forced shutdown, doing backup

--- a/index.html
+++ b/index.html
@@ -45,39 +45,39 @@
     <h2>Current Ambitions in Coding</h2>
     <p>The reason that I wanted to take the Epicodus class is to beef up my coding skills, so that I can be more efficient at working with companies and non-profits. I used to code a long time ago, and enjoyed it in the fascinating/frustrating/fulfilling way that programing can be. I am amazed that much of the logic follows through and there are great tools like editors and Github. However, the jumping and getting it done eludes me, as I seem to be missing some key elements.</p>
 
-<h3>Coding Projects</h3>
+<h2>Coding Projects</h2>
 <ul>
-  <li> hello-world-2</li>
+  <li><strong> hello-world-2</strong></li>
     <ul>
       <li>Epicodus hello world in different languages.</li>
       <li>Written in html </li>
       <li> <a href="https://github.com/GraceInGravity/hello-world-2/blob/master/hello-world.html">hello-world-2 link</a></li>
     </ul>
-  <li>wiki</li>
+  <li><strong>wiki</strong></li>
     <ul>
       <li>An attempted Wikipedia mirror</li>
       <li>Written in html</li>
       <li><a href="https://github.com/GraceInGravity/wiki/blob/master/index.html">wiki clone link</a></li>
     </ul>
-    <li>petpage</li>
+    <li><strong>petpage</strong></li>
       <ul>
         <li>A Lost Pet page</li>
         <li>Written in html</li>
         <li><a href="https://github.com/GraceInGravity/petpage.git">lost pet git link</a></li>
-      </ul><li>Cupcake-shop</li>
+      </ul><li><strong>Cupcake-shop</strong></li>
         <ul>
           <li>Cupcakes for Bunnies website</li>
           <li>Written in html</li>
           <li><a href="https://github.com/GraceInGravity/Cupcake-shop">cupcake page link</a></li>
         </ul>
-        <li>vaca</li>
+        <li><strong>vaca</strong></li>
           <ul>
             <li>An unexpected vacation website!</li>
             <li>Written in html</li>
             <li><a href="https://github.com/GraceInGravity/vaca/blob/master/index.html">wiki clone link</a></li>
           </ul>
-          <li>This very page is an example of Nuala's work</li>
-          <li>Many Many More to come!</li>
+          <li><strong>This very page is an example of Nuala's work</strong></li>
+          <li><strong><em>Many Many More to come!</em></strong></li>
 </ul>
 
 <!-- https://program.sha2017.org/speakers/147.html -->
@@ -98,13 +98,13 @@
 
   <div class="sidebar">
     <strong>Reason to go to Sligo Ireland</strong>
-    <ul>
+    <ol>
       <li>If you are a Writer or a Painter...</li>
       <li>If you just wish to get away from the hectic noise of modern life...</li>
       <li>If you wish for your children to discover a magical world of nature or history...</li>
       <li>If you don't wish to be surrounded by tourists and instead seek to experience a traditional Ireland...</li>
       <li>If you are drawn to the mythology of Celtic History...</li>
-    </ul>
+    </ol>
   </div>
 
 
