--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
   <head>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title>Nuala's Portfolio Landing Page</title>
   </head>
@@ -45,43 +45,12 @@
     <h2>Current Ambitions in Coding</h2>
     <p>The reason that I wanted to take the Epicodus class is to beef up my coding skills, so that I can be more efficient at working with companies and non-profits. I used to code a long time ago, and enjoyed it in the fascinating/frustrating/fulfilling way that programing can be. I am amazed that much of the logic follows through and there are great tools like editors and Github. However, the jumping and getting it done eludes me, as I seem to be missing some key elements.</p>
 
-<h2>Coding Projects</h2>
-<ul>
-  <li><strong> hello-world-2</strong></li>
-    <ul>
-      <li>Epicodus hello world in different languages.</li>
-      <li>Written in html </li>
-      <li> <a href="https://github.com/GraceInGravity/hello-world-2/blob/master/hello-world.html">hello-world-2 link</a></li>
-    </ul>
-  <li><strong>wiki</strong></li>
-    <ul>
-      <li>An attempted Wikipedia mirror</li>
-      <li>Written in html</li>
-      <li><a href="https://github.com/GraceInGravity/wiki/blob/master/index.html">wiki clone link</a></li>
-    </ul>
-    <li><strong>petpage</strong></li>
-      <ul>
-        <li>A Lost Pet page</li>
-        <li>Written in html</li>
-        <li><a href="https://github.com/GraceInGravity/petpage.git">lost pet git link</a></li>
-      </ul><li><strong>Cupcake-shop</strong></li>
-        <ul>
-          <li>Cupcakes for Bunnies website</li>
-          <li>Written in html</li>
-          <li><a href="https://github.com/GraceInGravity/Cupcake-shop">cupcake page link</a></li>
-        </ul>
-        <li><strong>vaca</strong></li>
-          <ul>
-            <li>An unexpected vacation website!</li>
-            <li>Written in html</li>
-            <li><a href="https://github.com/GraceInGravity/vaca/blob/master/index.html">wiki clone link</a></li>
-          </ul>
-          <li><strong>This very page is an example of Nuala's work</strong></li>
-          <li><strong><em>Many Many More to come!</em></strong></li>
-</ul>
+
 
 <!-- https://program.sha2017.org/speakers/147.html -->
     <div class="my-class">
+      <p> </p>
+      <p> </p>
 
       <h2>Nuala's Professional Work</h2>
       <p>Nuala is an Economist and Entrepreneur focusing on practical activism. Her background is in tech, activism (disability, feminism, GLBT, environment), and behavioral economics. She divides her time between her two countries of the United States and Ireland.
@@ -94,18 +63,46 @@
 
   </div>
 
+  <div class="sidebar">
+  <h2>Coding Projects</h2>
+  <ul>
+    <li><strong> hello-world-2</strong></li>
+      <ul>
+        <li>Epicodus hello world in different languages.</li>
+        <li>Written in html </li>
+        <li> <a href="https://github.com/GraceInGravity/hello-world-2/blob/master/hello-world.html">hello-world-2 link</a></li>
+      </ul>
+    <li><strong>wiki</strong></li>
+      <ul>
+        <li>An attempted Wikipedia mirror</li>
+        <li>Written in html</li>
+        <li><a href="https://github.com/GraceInGravity/wiki/blob/master/index.html">wiki clone link</a></li>
+      </ul>
+      <li><strong>petpage</strong></li>
+        <ul>
+          <li>A Lost Pet page</li>
+          <li>Written in html</li>
+          <li><a href="https://github.com/GraceInGravity/petpage.git">lost pet git link</a></li>
+        </ul><li><strong>Cupcake-shop</strong></li>
+          <ul>
+            <li>Cupcakes for Bunnies website</li>
+            <li>Written in html</li>
+            <li><a href="https://github.com/GraceInGravity/Cupcake-shop">cupcake page link</a></li>
+          </ul>
+          <li><strong>vaca</strong></li>
+            <ul>
+              <li>An unexpected vacation website!</li>
+              <li>Written in html</li>
+              <li><a href="https://github.com/GraceInGravity/vaca/blob/master/index.html">wiki clone link</a></li>
+            </ul>
+            <li><strong>This very page is an example of Nuala's work</strong></li>
+            <li><strong><em>Many Many More to come!</em></strong></li>
+          </ul>
+        </div>
+
 <!-- https://www.facebook.com/MoyturaIrishMountainRetreat/ -->
 
-  <div class="sidebar">
-    <strong>Reason to go to Sligo Ireland</strong>
-    <ol>
-      <li>If you are a Writer or a Painter...</li>
-      <li>If you just wish to get away from the hectic noise of modern life...</li>
-      <li>If you wish for your children to discover a magical world of nature or history...</li>
-      <li>If you don't wish to be surrounded by tourists and instead seek to experience a traditional Ireland...</li>
-      <li>If you are drawn to the mythology of Celtic History...</li>
-    </ol>
-  </div>
+
 
 
     <h2>Nuala's Home in Ireland</h2>
@@ -124,17 +121,33 @@
 <img class="resize" src="RavenOnLabby.jpg" alt="Raven sitting on the Labby Rock">
 </div>
 
+
+<p>Centrally located between Castlebaldwin, Riverstown, Sligo, Boyle/Carrick, and Ballymote. Travel to different Art and Music festivals through-out the region. Try out surfing on one day and travel to charming shopping the next day.</p>
+<p>Sweet house, built with love and with guests in mind. An eco-green remodel recently for a healthy interior. House is insulated and has double paned modern windows. Lots of new features like wood floors and beautiful wall colors. This house is furnished with many antique furnishings but modern beds, hot water, heat and kitchen. This house on a hill has a sitting room, dining room, and conservatory porch on the front of the house.</p>
+
+<div class="sidebar">
+  <strong>Reason to go to Sligo Ireland</strong>
+  <ol>
+    <li>If you are a Writer or a Painter...</li>
+    <li>If you just wish to get away from the hectic noise of modern life...</li>
+    <li>If you wish for your children to discover a magical world of nature or history...</li>
+    <li>If you don't wish to be surrounded by tourists and instead seek to experience a traditional Ireland...</li>
+    <li>If you are drawn to the mythology of Celtic History...</li>
+  </ol>
+</div>
+
+<p>Pull out dining room table can seat eight. Plenty of wine glasses and cocktail glasses for company as well as serving dishes.
+The conservatory is warm and snug and bright even when the weather is not. Curl up on the sectional couch with a cup of tea and a good book. Be inspired and sit at the desk to write your novel. This is the desk that</p>
+
+
+
+<p>The kitchen has all appliances including microwave, hot water pot and toaster. Kitchen has just been updated with storage fixtures and butcher block. Kitchen includes all the dishes, pots, pans, silverware etc to cook a big meal for guests.
+The Master Bedroom has a new Queen size bed, bureau, desk and a spacious closet. The second bedroom has room for two and a bureau and large closet. The third bedroom has a modern single bed, shelves, and a closet.</p>
+
 <div class="rightphoto">
 <img class="resize" src="IrishPonies.jpg" alt="Cute ponies">
 </div>
 
-<p>Centrally located between Castlebaldwin, Riverstown, Sligo, Boyle/Carrick, and Ballymote. Travel to different Art and Music festivals through-out the region. Try out surfing on one day and travel to charming shopping the next day.</p>
-<p>Sweet house, built with love and with guests in mind. An eco-green remodel recently for a healthy interior. House is insulated and has double paned modern windows. Lots of new features like wood floors and beautiful wall colors. This house is furnished with many antique furnishings but modern beds, hot water, heat and kitchen. This house on a hill has a sitting room, dining room, and conservatory porch on the front of the house.</p>
-<p>Pull out dining room table can seat eight. Plenty of wine glasses and cocktail glasses for company as well as serving dishes.
-The conservatory is warm and snug and bright even when the weather is not. Curl up on the sectional couch with a cup of tea and a good book. Be inspired and sit at the desk to write your novel. This is the desk that</p>
-
-<p>The kitchen has all appliances including microwave, hot water pot and toaster. Kitchen has just been updated with storage fixtures and butcher block. Kitchen includes all the dishes, pots, pans, silverware etc to cook a big meal for guests.
-The Master Bedroom has a new Queen size bed, bureau, desk and a spacious closet. The second bedroom has room for two and a bureau and large closet. The third bedroom has a modern single bed, shelves, and a closet.</p>
 <p>There are extra mattresses which can be used in other parts of the house as well.
 Plenty of linens and towels available.
 Bathroom has a full soaking tub. Hairdryer, curling iron, and iron available for guest use.
